# hobby-game-engine

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
engine/: CMakeLists.txt
engine/core/: Camera2D.cpp  Camera2D.h  Game.cpp  Game.h  GameConfig.h  GameObject.h  Scene.cpp  Scene.h  Time.cpp  Time.h  Transform.h
engine/debug/: DebugUI.cpp  DebugUI.h  ECSInspector.cpp  ECSInspector.h
engine/ecs/: ComponentStorage.h  Entity.h  EntityManager.cpp  EntityManager.h  World.h
engine/ecs/components/: CameraOffset.h  CameraTarget.h  Collider.h  InputIntent.h  Sprite.h  Transform.h  Velocity.h
engine/graphics/: AssetManager.cpp  AssetManager.h  Sprite.h  Texture.cpp  Texture.h  Tileset.cpp  Tileset.h
engine/input/: Input.cpp  Input.h
engine/math/: Vector2.h
engine/physics/: Collider.h
engine/platform/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
engine/serialization/: SceneSerializer.cpp  SceneSerializer.h  TilemapSerializer.cpp  TilemapSerializer.h  WorldSerializer.cpp  WorldSerializer.h
engine/systems/: CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  InputECSSystem.cpp  InputECSSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerControlSystem.cpp  PlayerControlSystem.h  RenderSystem.cpp  RenderSystem.h
engine/world/: Tilemap.cpp  Tilemap.h
games/demo/: CMakeLists.txt
games/demo/assets/: level1.csv  level_deco.csv  level_solid.csv
games/demo/src/: GameSetup.cpp  GameSetup.h  main.cpp
